test/files/neg/t8650b.check
t8650b.scala:13: error: annotation argument needs to be a constant; found: "".+("MyLib").+(" ").+(17)
  @deprecated(s"$greeting world", since=s"$lib $version")
                                                ^
t8650b.scala:16: error: annotation argument needs to be a constant; found: "".+("MyLib").+(" ").+(17)
  @deprecated(f"$greeting world", since=f"$lib $version")
                                                ^
2 errors
